--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} | {{ site.description }}
+      {{ site.title }} | {{ site.descriptionz }}
     {% else %}
       {{ page.title }} | {{ site.title }}
     {% endif %}
@@ -28,8 +28,6 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
 
-  <!-- Google Analytics -->
-  {% include google-analytics.html %}
 
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
