thesis+small changes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,9 @@
 
   <title>
     {% if page.title == "Home" %}
-      {{ site.title }} | {{ site.descriptionz }}
+      {{ site.title }} {{ site.descriptionz }}
     {% else %}
-      {{ page.title }} | {{ site.title }}
+      {{ page.title }} {{ site.title }}
     {% endif %}
   </title>
 
