--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <div class="post-date"><a href="{{ site.github.url }}/menu/about.html">{{ site.title }} | {{ site.description }} by {{ site.author }}</a></div>
+  <div class="post-date"><a href="{{ site.github.url }}/menu/about.html">{{ site.title }} {{ site.description }} by {{ site.author }}</a></div>
 </footer>
